# currency-tracker

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
backend/currency_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/models/: __init__.py  currency.py
backend/repositories/: __init__.py  historical_rates_repository.py  rates_repository.py
backend/routes/: currency.py  healthcheck.py
backend/services/: __init__.py  exchanges.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  CurrencyChart.js
