[project]
name = "currency-tracker"
version = "1.0.0"
description = "currency-tracker backend"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "litestar>=2.17.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
]

[tool.mypy]
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = false
follow_imports = "normal"
explicit_package_bases = true
warn_unreachable = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[tool.black]
line-length = 88
target-version = ["py313"]
skip-string-normalization = false